基于glsl attribute变量绘制点

--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
       type="module"
       src="./src/01-GettingStartedWithWebgl/02-HelloCanvas.js"
     ></script> -->
-    <script
+    <!-- <script
       type="module"
       src="./src/01-GettingStartedWithWebgl/03-HelloPoint1.js"
+    ></script> -->
+    <script
+      type="module"
+      src="./src/01-GettingStartedWithWebgl/04-HelloPoint2.js"
     ></script>
   </body>
 </html>
