通过鼠标交互绘制点

--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
       type="module"
       src="./src/01-GettingStartedWithWebgl/03-HelloPoint1.js"
     ></script> -->
-    <script
+    <!-- <script
       type="module"
       src="./src/01-GettingStartedWithWebgl/04-HelloPoint2.js"
+    ></script> -->
+    <script
+      type="module"
+      src="./src/01-GettingStartedWithWebgl/05-ClickedPoints.js"
     ></script>
   </body>
 </html>
