使用uniform变量修改点颜色

--- a/index.html
+++ b/index.html
@@ -37,9 +37,13 @@
       type="module"
       src="./src/01-GettingStartedWithWebgl/04-HelloPoint2.js"
     ></script> -->
-    <script
+    <!-- <script
       type="module"
       src="./src/01-GettingStartedWithWebgl/05-ClickedPoints.js"
+    ></script> -->
+    <script
+      type="module"
+      src="./src/01-GettingStartedWithWebgl/06-ColoredPoints.js"
     ></script>
   </body>
 </html>
