--- a/index.html
+++ b/index.html
@@ -41,9 +41,13 @@
       type="module"
       src="./src/01-GettingStartedWithWebgl/05-ClickedPoints.js"
     ></script> -->
-    <script
+    <!-- <script
       type="module"
       src="./src/01-GettingStartedWithWebgl/06-ColoredPoints.js"
+    ></script> -->
+    <script
+      type="module"
+      src="./src/02-DrawAndTransformTriangles/01-MultiPoint.js"
     ></script>
   </body>
 </html>
