使用TRIANGLE_STRIP绘制矩形

--- a/index.html
+++ b/index.html
@@ -49,9 +49,13 @@
       type="module"
       src="./src/02-DrawAndTransformTriangles/01-MultiPoint.js"
     ></script> -->
-    <script
+    <!-- <script
       type="module"
       src="./src/02-DrawAndTransformTriangles/02-HelloTriangle.js"
+    ></script> -->
+    <script
+      type="module"
+      src="./src/02-DrawAndTransformTriangles/03-HelloRectangle.js"
     ></script>
   </body>
 </html>
