使用TRIANGLE_FAN绘制图形

--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
       type="module"
       src="./src/02-DrawAndTransformTriangles/02-HelloTriangle.js"
     ></script> -->
-    <script
+    <!-- <script
       type="module"
       src="./src/02-DrawAndTransformTriangles/03-HelloRectangle.js"
+    ></script> -->
+    <script
+      type="module"
+      src="./src/02-DrawAndTransformTriangles/04-HelloQuad_FAN.JS"
     ></script>
   </body>
 </html>
