平移三角形

--- a/index.html
+++ b/index.html
@@ -57,9 +57,13 @@
       type="module"
       src="./src/02-DrawAndTransformTriangles/03-HelloRectangle.js"
     ></script> -->
-    <script
+    <!-- <script
       type="module"
       src="./src/02-DrawAndTransformTriangles/04-HelloQuad_FAN.JS"
+    ></script> -->
+    <script
+      type="module"
+      src="./src/02-DrawAndTransformTriangles/05-TranslatedTriangle.js"
     ></script>
   </body>
 </html>
