旋转三角形

--- a/index.html
+++ b/index.html
@@ -61,9 +61,13 @@
       type="module"
       src="./src/02-DrawAndTransformTriangles/04-HelloQuad_FAN.JS"
     ></script> -->
-    <script
+    <!-- <script
       type="module"
       src="./src/02-DrawAndTransformTriangles/05-TranslatedTriangle.js"
+    ></script> -->
+    <script
+      type="module"
+      src="./src/02-DrawAndTransformTriangles/06-RotatedTriangle.js"
     ></script>
   </body>
 </html>
