使用变换矩阵实现平移旋转缩放

--- a/index.html
+++ b/index.html
@@ -65,9 +65,13 @@
       type="module"
       src="./src/02-DrawAndTransformTriangles/05-TranslatedTriangle.js"
     ></script> -->
-    <script
+    <!-- <script
       type="module"
       src="./src/02-DrawAndTransformTriangles/06-RotatedTriangle.js"
+    ></script> -->
+    <script
+      type="module"
+      src="./src/02-DrawAndTransformTriangles/07-RotatedTriangle_Matrix.js"
     ></script>
   </body>
 </html>
