基于矩形计算库旋转平移三角形

--- a/index.html
+++ b/index.html
@@ -69,9 +69,13 @@
       type="module"
       src="./src/02-DrawAndTransformTriangles/06-RotatedTriangle.js"
     ></script> -->
-    <script
+    <!-- <script
       type="module"
       src="./src/02-DrawAndTransformTriangles/07-RotatedTriangle_Matrix.js"
+    ></script> -->
+    <script
+      type="module"
+      src="./src/03-AdvancedTransformationandAnimationBasics/01-RotatedTranslatedTriangle.js"
     ></script>
   </body>
 </html>
