--- a/index.html
+++ b/index.html
@@ -73,9 +73,13 @@
       type="module"
       src="./src/02-DrawAndTransformTriangles/07-RotatedTriangle_Matrix.js"
     ></script> -->
-    <script
+    <!-- <script
       type="module"
       src="./src/03-AdvancedTransformationandAnimationBasics/01-RotatedTranslatedTriangle.js"
+    ></script> -->
+    <script
+      type="module"
+      src="./src/03-AdvancedTransformationandAnimationBasics/02-RotatingTriangle.js"
     ></script>
   </body>
 </html>
