--- a/index.html
+++ b/index.html
@@ -77,9 +77,13 @@
       type="module"
       src="./src/03-AdvancedTransformationandAnimationBasics/01-RotatedTranslatedTriangle.js"
     ></script> -->
-    <script
+    <!-- <script
       type="module"
       src="./src/03-AdvancedTransformationandAnimationBasics/02-RotatingTriangle.js"
+    ></script> -->
+    <script
+      type="module"
+      src="./src/04-ColorAndTexture/01-MultiAttributeSize.js"
     ></script>
   </body>
 </html>
