position与pointsize保存在同一个缓冲区中绘制多个点

--- a/index.html
+++ b/index.html
@@ -81,9 +81,13 @@
       type="module"
       src="./src/03-AdvancedTransformationandAnimationBasics/02-RotatingTriangle.js"
     ></script> -->
-    <script
+    <!-- <script
       type="module"
       src="./src/04-ColorAndTexture/01-MultiAttributeSize.js"
+    ></script> -->
+    <script
+      type="module"
+      src="./src/04-ColorAndTexture/02-MultiAttributeSize_Interleaved.js"
     ></script>
   </body>
 </html>
