使用varying传递变量赋色

--- a/index.html
+++ b/index.html
@@ -85,9 +85,13 @@
       type="module"
       src="./src/04-ColorAndTexture/01-MultiAttributeSize.js"
     ></script> -->
-    <script
+    <!-- <script
       type="module"
       src="./src/04-ColorAndTexture/02-MultiAttributeSize_Interleaved.js"
+    ></script> -->
+    <script
+      type="module"
+      src="./src/04-ColorAndTexture/03-MultiAttributeColor.js"
     ></script>
   </body>
 </html>
